[package]
name = "perf-zoo"
version = "0.1.1"
authors = ["Yao Yue <thinkingfish@gmail.com>"]
edition = "2024"

[[bin]]
name = "mutex-contention"
path = "src/mutex-contention.rs"

[[bin]]
name = "memory-alloc"
path = "src/memory-alloc.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
